Added jstl jar so we can use expression language and votefunction

--- a/WebContent/mystyle.css
+++ b/WebContent/mystyle.css
@@ -8,6 +8,15 @@ body{
 	text-align: center;
 	height: 17vh;
 }
+#test{
+	
+	list-style:none;
+  	max-height:100%;
+  	overflow:auto;
+  	padding:0;
+  	text-indent:10px;
+}
+
 a{
 	float: left;
 	padding-left: 1vw;
