--- a/WebContent/mystyle.css
+++ b/WebContent/mystyle.css
@@ -1,7 +1,13 @@
 @CHARSET "ISO-8859-1";
 body{
-	width: 100%;
-	height: 100%;
+	background-image: url("pics/index.jpg");
+	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
+	background-repeat: no-repeat;
+	background-color:#009dfe;
+	min-width:1000px;
+	min-height:1000px;
 }
 h1{
 	font-size: 52px;
@@ -9,8 +15,12 @@ h1{
 }
 .navbar-default{
 	margin: 0px;
-	text-align: center;
+	text-align: left;
+	padding-left:300px;
 	height: 17vh;
+	background-color: #c1bfbd;
+	opacity:.8;
+	
 }
 a{
 	float: left;
@@ -22,21 +32,23 @@ a{
 	margin-top: 1vw;
 	text-align: center;
 	display: inline-block;
-	
 }
 #firstDiv{
-	margin-left:12vw;
+	margin-left:15vw;
 }
 
 .content{
 	background: rgba(0, 0, 0, 0.1);
+	background-color: #c1bfbd;
+	opacity:.8;
+	filter: blur(5px);
 	border-radius: 10px;
 	margin-top: 3vw;
 	height: 50vh;
 	font-family:Arial;
 	font-size: 14px;
-	color: white;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	color: black;
+	
 	
 }
 .apicontent{
@@ -51,8 +63,13 @@ a{
 	list-style-type: none;
 }
 .comments{
-	margin-left:20vw;
+	margin-left:15vw;
 	padding-bottom:2cm;
+	
+}
+.comments form{
+	width:100%;
+	color:white;
 }
 .title{
 	font-family:Arial;
