--- a/WebContent/mystyle.css
+++ b/WebContent/mystyle.css
@@ -16,7 +16,7 @@ h1{
 .navbar-default{
 	margin: 0px;
 	text-align: left;
-	padding-left:300px;
+	padding-left:16vw;
 	height: 17vh;
 	background-color: #c1bfbd;
 	opacity:.8;
@@ -34,7 +34,7 @@ a{
 	display: inline-block;
 }
 #firstDiv{
-	margin-left:15vw;
+	margin-left: 16vw;
 }
 
 .content{
@@ -69,11 +69,10 @@ a{
 }
 .comments form{
 	width:100%;
-	color:white;
 }
 .title{
 	font-family:Arial;
-	font-size: 22px;
+	font-size: 18px;
 	color: white;
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
