--- a/WebContent/mystyle.css
+++ b/WebContent/mystyle.css
@@ -8,31 +8,54 @@ body {
 	background-repeat: no-repeat;
 	background-color: #009dfe;
 }
+.linktext{
+	float: left;
+	font-size: 150%;
+}
 
 form:hover {
 	cursor: pointer;
 }
+.linkimages{
+    padding-bottom: 20%;
+}
+.barimg{
+	vertical-align: middle;
+    width: 100%;
+    height: auto;
+}
+.foodimg{
+    vertical-align: middle;
+    width: 100%;
+    height: auto;
+}
+.discoimg{
+    vertical-align: middle;
+    width: 100%;
+    height: auto;
+}
 
 #clock {
-	font-size: 52px;
+	font-size: 300%;
 	font-family: Arial;
 	float: right;
+	color: white;
 }
 
 .h1 {
-	font-size: 52px;
-	font-family: Arial;
-	width: 30vw;
-	margin: 0px;
-	display: inline-block;
+    font-size: 300%;
+    font-family: Arial;
+    margin: 0px;
+    display: inline-block;
+    text-align: left;
+    color: white;
 }
 
 .navbar-default {
-	padding: 3vw;
-	margin: 0px;
+	padding: 3%;
 	text-align: left;
 	height: 17vh;
-	background-color: #c1bfbd;
+	background-color: black;
 	opacity: .8;
 }
 
@@ -40,10 +63,10 @@ a {
 	float: left;
 	padding-left: 1vw;
 	padding-right: 1vw;
-	font-size: 20px;
+	font-size: 12px;
 	font-family: Arial;
 	text-decoration: none;
-	color: black;
+	color: white;
 }
 
 a:hover {
@@ -51,9 +74,11 @@ a:hover {
 }
 
 .links {
-	margin-top: 1vw;
-	text-align: center;
-	display: inline-block;
+    margin-top: 1vw;
+    text-align: center;
+    display: inline-block;
+    padding: 0px;
+    margin: 0px;
 }
 
 #firstDiv {
@@ -92,15 +117,15 @@ a:hover {
 
 .content {
 	background: rgba(0, 0, 0, 0.1);
-	background-color: #c1bfbd;
-	opacity: .9;
+	background-color: black;
+	opacity: .8;
 	filter: blur(5px);
 	border-radius: 10px;
 	margin-top: 3vw;
 	height: 50vh;
 	font-family: Arial;
 	font-size: 16px;
-	color: black;
+	color: white;
 	overflow-y: auto;
 }
 
@@ -147,6 +172,10 @@ a:hover {
 	 box-shadow: inset 0 0 5px black;
 	 border: 0px; 
 	 border-radius: 0.5vw;
+}
+
+#showText{
+	padding: 0px;
 }
 
 .submit {
